--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
   </head>
 
   <body>
-    <div id="container" style="position:absolute"> 
-
       <!-- FOR ENEMIES AND TEXT -->
       <canvas id="canvas1" width="800" height="300" 
-      style="border:1px solid; position:absolute; margin:auto; z-index: 3;
-      "></canvas>
+      style="border:1px solid; position:absolute; margin:auto; z-index: 3;">
+      </canvas>
 
       <!-- UI, SHOOTER, FLOOR -->
       <canvas id="canvas2" width="800" height="300" 
@@ -39,6 +37,6 @@
       style="border:1px solid; position:absolute; z-index: 2;
       "></canvas>
 
-    <script type="module" src="src/script.js"></script>
+      <script type="module" src="src/script.js"></script>
   </body>
 </html>
