--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       style="border:1px solid; position:absolute; z-index: 2;
       "></canvas>
 
+      <!-- <script type="module" src="src/script.js"></script> -->
       <script type="module" src="src/script.js"></script>
   </body>
 </html>
