--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
         style="border:1px solid; position:absolute; z-index: 1;
       "></canvas>
 
+      <!-- BULLETS -->
       <canvas id="bullet-canvas" width="800" height="300" 
       style="border:1px solid; position:absolute; z-index: 2;
       "></canvas>
 
+      <script type="module" src="src/readyImages.js"></script>
+      <script type="module" src="src/health.js"></script>
       <!-- <script type="module" src="src/script.js"></script> -->
-      <script type="module" src="src/script.js"></script>
+      <!-- if I have more than one script, how will both be executed? From top to bottom -->
   </body>
 </html>
