preload massive overhaul upcoming

--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
       style="border:1px solid; position:absolute; z-index: 2;
       "></canvas>
 
-      <script type="module" src="src/readyImages.js"></script>
-      <script type="module" src="src/health.js"></script>
-      <!-- <script type="module" src="src/script.js"></script> -->
+      <!-- <script type="module" src="src/health.js"></script> -->
+      <script type="module" src="src/script.js"></script>
       <!-- if I have more than one script, how will both be executed? From top to bottom -->
   </body>
 </html>
